<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="showViewModel"
            type="ru.dariamikhailukova.task8.mvvm.viewModel.show.ShowViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mvvm.view.show.ShowFragment">

        <EditText
            android:id="@+id/nameEditText"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/my_8dp"
            android:layout_marginTop="@dimen/my_8dp"
            android:layout_marginEnd="@dimen/my_8dp"
            android:ems="10"
            android:hint="@string/name_note"
            android:inputType="textMultiLine"
            android:paddingStart="@dimen/my_5dp"
            android:paddingTop="@dimen/my_8dp"
            android:paddingEnd="@dimen/my_5dp"
            android:paddingBottom="@dimen/my_8dp"
            android:text="@={showViewModel.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="Homework" />


        <EditText
            android:id="@+id/textEditText"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/my_8dp"
            android:layout_marginEnd="@dimen/my_8dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/text_note"
            android:inputType="textMultiLine"
            android:paddingStart="@dimen/my_5dp"
            android:paddingTop="@dimen/my_8dp"
            android:paddingEnd="@dimen/my_5dp"
            android:paddingBottom="@dimen/my_8dp"
            android:text="@={showViewModel.text}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateTextView"
            android:autofillHints="Don't do my homework." />

        <TextView
            android:id="@+id/dateTextView"
            style="@style/dateStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/my_8dp"
            android:layout_marginEnd="@dimen/my_8dp"
            android:ems="10"
            android:hint="@string/date"
            android:paddingTop="@dimen/my_5dp"
            android:paddingBottom="@dimen/my_5dp"
            android:text="@{showViewModel.dateStr}"
            android:textAlignment="viewEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>